Add modern LaTeX package setup with comprehensive configurations
- Introduced `trymtex.sty` for a modern LuaLaTeX setup.
- Included core packages for font selection, micro-typography, and language support.
- Enhanced text and typography with packages for better alignment and list customization.
- Added support for tables and figures with professional styling and code highlighting.
- Implemented advanced math packages and custom math commands for improved notation.
- Configured page layout, headers, footers, and table of contents for better document structure.
- Set up hyperref for enhanced navigation and glossary support with hyperlinks.
- Defined color schemes and theorem environments for better visual distinction.
- Included TikZ libraries for graphics and tree diagrams.

--- a/preamble/trymtex.sty
+++ b/preamble/trymtex.sty
@@ -51,6 +51,8 @@
 \newcommand{\ep}{\varepsilon}
 \newcommand{\vp}{\varphi}
 \newcommand{\cond}{\operatorname{cond}}
+\newcommand{\argmin}{\operatorname{argmin}}
+\newcommand{\argmax}{\operatorname{argmax}}
 \newcommand{\bm}[1]{\symbf{#1}}
 \newcommand{\bmat}[1]{\begin{bmatrix}#1\end{bmatrix}}
 \newcommand{\R}{\mathbb{R}}
@@ -134,6 +136,8 @@
 \renewcommand{\cftsubsubsecfont}{\normalfont} 
 \renewcommand{\cftsubsubsecleader}{\cftdotfill{\cftdotsep}}
 \renewcommand{\cftsubsubsecafterpnum}{\hspace*{2em}}
+\cftsetindents{subsubsection}{3.8em}{3.2em}
+\setcounter{tocdepth}{2}
 
 % Hyperref configuration
 \usepackage[colorlinks]{hyperref}
