--- a/main.tex
+++ b/main.tex
@@ -1,34 +1,32 @@
 \documentclass[10pt, a4paper]{report}
-\usepackage{trymtex}
+\usepackage{preamble/trymtex}
+\usepackage{import}
+
+\makeglossaries
+
+% Load glossary entries
+\loadglsentries{appendices/B_glossary}
+\addbibresource{preamble/bib/references.bib}
 
 \includeonly{
     preamble/frontmatter/titlepage,
-    chapters/1/introduction,
-    chapters/2/unconstrained_optimization,
-    chapters/3/constrained_optimization,
-    preamble/appendix/LectureNotes,
-    preamble/bib/references,
-    preamble/bib/glossary,
+    parts/introduksjon,
+    parts/ubetinget,
+    parts/konveks,
+    parts/betinget,
+    appendices/F_functions,
 }
-\makeglossaries
-\addbibresource{preamble/bib/references.bib}
-\include{preamble/bib/glossary}
-\setglossarystyle{listhypergroup}
-
 
 \begin{document}
-
 \include{preamble/frontmatter/titlepage}
-
 \tableofcontents
 
-\include{chapters/1/introduction}
-\include{chapters/2/unconstrained_optimization}
-\include{chapters/3/convex_optimization}
-\include{chapters/4/constrained_optimization}
+\include{parts/introduksjon}
+\include{parts/ubetinget}
+\include{parts/konveks}
+\include{parts/betinget}
 
-\appendix
-\include{preamble/appendix/LectureNotes}
+\include{appendices/F_functions}
 
 \printbibliography
 \printglossary
