--- a/preamble/frontmatter/titlepage.tex
+++ b/preamble/frontmatter/titlepage.tex
@@ -3,39 +3,39 @@
     \center
     
     % Top section with logo
-    \vspace*{2cm}
+    \vspace*{1.5cm}  % Reduced from 2cm
     \begin{center}
         \includegraphics[width=5cm]{preamble/frontmatter/TS_GooseLogo.png}
     \end{center}
     
-    \vspace{2cm}
+    \vspace{1.5cm}  % Reduced from 2cm
     
     % Course code & title with modern styling
     {\color{ntnu-blue}\sffamily\LARGE TMA4180 \par}
-    \vspace{0.8cm}
+    \vspace{0.5cm}  % Reduced from 0.8cm
     {\sffamily\huge\bfseries\color{black} Optimering I \par}
     
-    \vspace{1.5cm}
+    \vspace{1.2cm}  % Reduced from 1.5cm
     
     % Stylized separator
     {\color{ntnu-lightblue}\HRule}
-    \vspace{0.75cm}
+    \vspace{0.5cm}  % Reduced from 0.75cm
     {\Large\sffamily\color{ntnu-blue} Notater i Optimering I \par}
-    \vspace{0.75cm}
+    \vspace{0.5cm}  % Reduced from 0.75cm
     {\color{ntnu-lightblue}\HRule}
     
-    \vspace{2cm}
+    \vspace{1.5cm}  % Reduced from 2cm
     
     % Author and semester info with modern layout
     \begin{minipage}{0.48\textwidth}
         \begin{flushleft}
             \large
             {\color{ntnu-blue}\textbf{Author}}\par
-            \vspace{0.2cm}
+            \vspace{0.15cm}  % Reduced from 0.2cm
             Trym Sæther\par
-            \vspace{0.3cm}
+            \vspace{0.2cm}  % Reduced from 0.3cm
             \includegraphics[height=1cm]{preamble/frontmatter/TS_Signature.png}\par
-            \vspace{0.3cm}
+            \vspace{0.2cm}  % Reduced from 0.3cm
             {\color{ntnu-purple}\textit{Physics and Mathematics}}
         \end{flushleft}
     \end{minipage}
@@ -44,21 +44,21 @@
         \begin{flushright}
             \large
             {\color{ntnu-blue}\textbf{Semester}}\par
-            \vspace{0.2cm}
+            \vspace{0.15cm}  % Reduced from 0.2cm
             Spring 2025\par
             6th semester
         \end{flushright}
     \end{minipage}
     
-    \vfill
+    \vfill  % This automatically fills available space
     
     % University info with modern styling
     \begin{center}
         {\color{ntnu-blue}\sffamily\Large Norwegian University of Science and Technology}
-        \vspace{0.4cm}
+        \vspace{0.3cm}  % Reduced from 0.4cm
         
         {\sffamily\large Department of Mathematical Sciences}
     \end{center}
     
-    \vspace{1cm}
+    \vspace{0.8cm}  % Reduced from 1cm
 \end{titlepage}
